--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,13 @@
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+
+        <!--            密码加密 解密-->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
 
