--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,7 +21,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&&useSSL=false
+    url: jdbc:mysql://localhost:3306/videodb?serverTimezone=GMT%2B8&&useSSL=false
     username: root
     password: root
     druid:
