--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,3 +65,10 @@ server:
     context-path: /video
     session:
       timeout: 10s
+
+  pagehelper:
+    helper-dialect: mysql
+    reasonable: true
+    support-methods-arguments: true
+    params: count=countSql
+    page-size-zero: true
