分页加载数据

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,9 +21,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/videodb?serverTimezone=GMT%2B8&&useSSL=false
+    url: jdbc:mysql://47.104.177.59:3306/videodb?serverTimezone=GMT%2B8&&useSSL=false
     username: root
-    password: root
+    password: yhc123
     druid:
       url: jdbc:mysql://localhost:3306/login
       username: root
